--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "start:multi": "ts-node src/loadBalancer.ts",
     "dev": "nodemon",
     "build": "tsc src/index.ts",
     "lint": "eslint . --ext .ts"
