--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "crud_api",
   "version": "1.0.0",
   "description": "Your task is to implement simple CRUD API using in-memory database underneath.",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start:dev": "cross-env NODE_ENV=development NODE_NO_WARNINGS=1 nodemon",
+    "start:prod": "cross-env NODE_ENV=production npm run build && node ./dist/bundle.js",
     "start:multi": "ts-node src/loadBalancer.ts",
-    "dev": "nodemon",
-    "build": "tsc src/index.ts",
+    "build": "webpack",
+    "test": "jest",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
@@ -21,16 +22,25 @@
   },
   "homepage": "https://github.com/skuzema/node-nodejs-task3#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
+    "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.3",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
